# Mosifra-API

./: Cargo.toml  build_log.txt  test_output.txt
src/: error_handling.rs  main.rs
src/models/auth/: auth_guard.rs  user_type.rs
src/models/courses/: course_type.rs
src/models/courses/dto/: class.rs
src/models/users/: company.rs  generic_user.rs  student.rs  university.rs
src/routes/auth/: login.rs
src/routes/courses/get/: internships.rs
src/utils/: mod.rs  validation.rs
src/utils/crypto/: generate_password.rs  hash_password.rs  verify_password.rs
src/utils/mail/: verify_mail.rs
