[package]
name = "Mosifra-API"
version = "0.1.0"
edition = "2024"

[dependencies]
any_ascii = "0.3.3"
anyhow = "1.0.99"
argon2 = "0.5.3"
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.3.1"
dotenvy = "0.15.7"
hmac = "0.12.1"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
lettre = "0.11.18"
minio = "0.3.0"
mongodb = "3.4.1"
passwords = "3.1.16"
rand = "0.9.2"
redis = "0.32.5"
regex = "1.11.2"
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_cors = "0.6.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
